@@ -21,7 +21,7 @@ list-style arguments
 \details{
 Here is the correspondence between the old and new arguments.
 
-For \code{plots} methods:
+For \code{plot} methods:
 
 \describe{
 \item{\code{multiline=TRUE/FALSE}}{\code{lines=list(multiline=TRUE/FALSE)}}
@@ -107,9 +107,10 @@ For \code{Effect} methods:
 \item{\code{offset={function}}}{\code{fixed.predictors=list(offset={function})}}
 
 \item{\code{partial.residuals=TRUE/FALSE}}{\code{residuals=TRUE/FALSE}}
-}
 
-}
+\item{\code{transformation}}{This argument to \code{Effect} is not needed to compute effects.  It can now be set directly with the \code{plot} method with the argument \code{axes = list(y = list(transformation=specification))}.}
+
+}}
 
 \author{John Fox \email{jfox@mcmaster.ca}}
 
